# trizaval

./: .gitignore  Cargo.toml  Full-Tree.tree  README.md
.github/workflows/: ci.yml
bindings/r/trizavalr/: DESCRIPTION  NAMESPACE  README.md
bindings/r/trizavalr/src/rust/: Cargo.toml  document.rs
bindings/r/trizavalr/src/rust/src/: lib.rs
crates/trizaval-cli/: Cargo.toml
crates/trizaval-core/: Cargo.toml
crates/trizaval-py/: Cargo.toml  pyproject.toml
crates/trizaval-py/python/trizaval/: __init__.py  cli.py
crates/trizaval-py/python/trizaval/harness/: __init__.py  judge.py  runner.py
crates/trizaval-py/python/trizaval/harness/providers/: __init__.py  anthropic_provider.py  base.py  openai_compatible_provider.py  openai_provider.py
crates/trizaval-py/python/trizaval/storage/: arrow_store.py  duckdb_store.py
crates/trizaval-py/python/trizaval/suite/: loader.py  schema.py
crates/trizaval-py/src/: lib.rs
crates/trizaval-wasm/: Cargo.toml
crates/trizaval-wasm/src/: lib.rs
dashboard/: README.md  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
dashboard/src/: App.tsx  ConfidenceIntervalChart.tsx  EffectSizeView.tsx  ScoreTrendChart.tsx  SequentialTrajectoryChart.tsx  sampleData.ts  wasmLoader.ts
docs/: README.md  bootstrap.md  effect-size.md  judge-bias-calibration.md  multiple-comparisons-correction.md  sequential-testing.md
suites/: example_suite.yaml
tests/python/: conftest.py  test_cli.py  test_judge.py  test_loader.py  test_providers.py  test_runner.py  test_schema.py  test_storage.py
(+26 files in other folders)
