[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "trizaval"
version = "0.1.0"
description = "Statistically rigorous evaluation for non-deterministic AI systems"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }

[tool.maturin]
module-name = "trizaval._trizaval_core"
python-source = "python"