[package]
name = 'trizavalr'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'
[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'trizavalr'
[[bin]]
name = 'document'
path = 'document.rs'
[dependencies]
extendr-api = '*'
trizaval-core = { path = '../../../../../crates/trizaval-core' }
[profile.release]
lto = true
codegen-units = 1